# Gaia

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
include/: Enemy.hpp  EnemyTypes.hpp  Game.hpp  Keybindings.hpp  PlaceholderTextures.hpp  Player.hpp  Room.hpp  SpellCaster.hpp
src/: Enemy.cpp  EnemyTypes.cpp  Game.cpp  PlaceholderTextures.cpp  Player.cpp  Room.cpp  SpellCaster.cpp  main.cpp
tools/: gen_characters.py  gen_dash_sprites.py  gen_hub_tiles.py  gen_placeholder_sprites.ps1
